# uralsteel-engineer-assistant

./: .gitignore  README.md  config.py  delete_unprocessed_documents.py  filter.py  generate_diffs.py  get_indexed_paths.py  ingest.py  ingest_markdown_dir_simple.py  ingest_status.json  lightrag_ingest_cli.py  lightrag_ingest_cli_parallel.py  lightrag_ingest_cli_sequential.py  lightrag_ingest_cli_upload.py  minio_insert.py  monitor.py  ocr.py  out.txt  processing_status.json  pyproject.toml  run_ingestion.py  table_ench.py  table_extract.py  tables.py  tables_parallel.py  test_lightrag.py  test_lightrag_api.py  test_simple.py
